ignore local notes

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+##PERSONAL
+TODO.txt
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,python,git,jetbrains,virtualenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,visualstudiocode,python,git,jetbrains,virtualenv
 
