--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 ##PERSONAL
 TODO.txt
+fake_client.py
+var.env
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,python,git,jetbrains,virtualenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,visualstudiocode,python,git,jetbrains,virtualenv
