Ignore speech recognition model

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 TODO.txt
 fake_client.py
 var.env
-
+en-model/
 # Created by https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,python,git,jetbrains,virtualenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,visualstudiocode,python,git,jetbrains,virtualenv
 
