--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@ TODO.txt
 fake_client.py
 var.env
 en-model/
+*.cert
+*.pkey
+
 # Created by https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,python,git,jetbrains,virtualenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,visualstudiocode,python,git,jetbrains,virtualenv
 
