Ignore cert files

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ var.env
 en-model/
 *.cert
 *.pkey
+crl
+openssl.conf
 
 # Created by https://www.toptal.com/developers/gitignore/api/java,visualstudiocode,python,git,jetbrains,virtualenv
 # Edit at https://www.toptal.com/developers/gitignore?templates=java,visualstudiocode,python,git,jetbrains,virtualenv
